syntax = "proto3";
package minecpp.proto.common.v1;

message ChunkPosition {
  int32 x = 1;
  int32 z = 2;
}

message BlockPosition {
  int32 x = 1;
  int32 y = 2;
  int32 z = 3;
}

message BlockState {
  uint32 block_state = 1;
}

message Gameplay {
  DimensionType dimension = 1;
  uint64 seed = 2;
  GameMode mode = 3;
  WorldType world = 4;
  int32 view_distance = 5;
  bool hardcore = 6;
  int32 max_players = 7;
  bool reduced_debug_info = 8;
  bool do_immediate_respawn = 9;
  Difficulty difficulty = 10;
}

message Rotation {
  float yaw = 1;
  float pitch = 2;
}

message ItemId {
  uint32 id = 1;
}

enum DimensionType {
  Overworld = 0;
  Nether = 1;
  End = 2;
}

enum Difficulty {
  Easy = 0;
  Normal = 1;
  Hard = 2;
}

enum GameMode {
  Survival = 0;
  Creative = 1;
  Adventure = 2;
  Spectator = 3;
}

enum WorldType {
  Default = 0;
  Flat = 1;
  LargeBiomes = 2;
  Amplified = 3;
  Customised = 4;
}

enum PlayerDiggingState {
  Digging = 0;
  CanceledDigging = 1;
  FinishedDigging = 2;
  DropAllItems = 3;
  DropItem = 4;
  ReleaseUseItem = 5;
  SwapHeldItems = 6;
}

enum Face {
  Bottom = 0;
  Top = 1;
  North = 2;
  South = 3;
  West = 4;
  East = 5;
}

enum LightType {
  Block = 0;
  Sky = 1;
}

message LightLevel {
  uint32 level = 1;
}

message ChunkSectionPosition {
  ChunkPosition chunk_position = 1;
  int32 y = 2;
}

message SectionRange {
  ChunkSectionPosition from = 1;
  ChunkSectionPosition to = 2;
}

message LightSource {
  common.v1.BlockPosition position = 1;
  int32 strength = 2;
}

enum InteractionType {
  Interact = 0;
  Attack = 1;
  InteractAt = 2;
}

enum HandType {
  MainHand = 0;
  OffHand = 1;
}

enum EntityAnimation {
  SwingMainArm = 0;
  TakeDamage = 1;
  LeaveBed = 2;
  SwingOffHand = 3;
  CriticalEffect = 4;
  MagicCriticalEffect = 5;
}

message UUID {
  uint64 lower = 1;
  uint64 upper = 2;
}

message Slot {
  common.v1.ItemId item_id = 1;
  uint32 count = 2;
  bytes nbt_data = 3;
}
